# github-issue-cli

./: Cargo.toml  README.md
src/: index.ts  main.rs
src/command/: create.ts  help.ts  update.ts
src/github/: github_api.rs  github_owners.rs  github_repo.rs  mod.rs  structs.rs
src/lib/: args.ts  base64.ts  env.ts  types.ts
src/lib/checker/: github_issue.ts
src/lib/github/: create_issue.ts  get_repository.ts  graphql.ts  update_issue.ts
src/lib/zenhub/: add_epic.ts  common.ts  get_board.ts  update_issue.ts
src/subcommand/: board.rs  config.rs
src/util/: config.rs  mod.rs  select.rs
src/zenhub/: board.rs  epic.rs  mod.rs  structs.rs  workspace.rs  zenhub_api.rs  zenhub_issue.rs
